--- a/style.css
+++ b/style.css
@@ -50,3 +50,30 @@ nav{
     display: flex;
     justify-content: space-between;
 }
+.cards{
+    width: 25%;
+    margin: 20px;
+    box-shadow: 0px 0px 40px 0px #00000026;
+}
+.last-box img{
+    width: 100%;
+}
+.footer{
+    display: flex;
+    align-items: center;
+}
+.icons{
+    display: flex;
+    justify-content: center;
+}
+.icons i{
+    color: #969BAB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+    background-color: #fdfbf0;
+    font-size: 25px;
+    border-radius: 50%;
+}
