--- a/style.css
+++ b/style.css
@@ -56,24 +56,33 @@ nav{
     box-shadow: 0px 0px 40px 0px #00000026;
 }
 .last-box img{
-    width: 100%;
+    width: 50%;
+    margin-bottom: 40px;
 }
 .footer{
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 .icons{
     display: flex;
-    justify-content: center;
 }
 .icons i{
     color: #969BAB;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
-    width: 50px;
-    background-color: #fdfbf0;
-    font-size: 25px;
+    height: 40px;
+    width: 40px;
+    background-color: #e4e4e4;
+    font-size: 20px;
     border-radius: 50%;
+    margin: 10px;
+}
+.copyright{
+    font-size: 17px;
+}
+.center, .fab{
+    display: flex;
+    justify-content: center;
 }
